<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InstaLikes</string>
    <string name="onboarding_welcome">Welcome to InstaLikes</string>
    <string name="onboarding_welcome_desc">Find out how many likes a post has on Instagram!</string>
    <string name="onboarding_login">Let\'s go!</string>
    <string name="add_profile_desc">Type the username you wish to know the posts likes</string>
    <string name="instagram_username_label">Instagram User</string>
    <string name="instagram_username_hint">Type the username</string>
    <string name="do_login_action">See likes</string>
    <string name="no_profile_selected">Select a profile</string>
    <string name="instagram_username_pattern" translatable="false">\@%1$s</string>
    <string name="instagram_verified_profile">Verified Profile</string>
    <string name="media_gallery_description">Photo Gallery</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="add_profile">Add profile</string>
    <string name="failed_to_load_profile">Failed to load information, try again later</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="remove_profile_sub">You are about to remove %1$s from your list</string>
    <string name="remove_profile_exp">Are you sure you would like to remove this profile? It could be added again whenever you want!</string>
    <string name="remove_profile_cancel">Cancel</string>
    <string name="remove_profile_continue">Remove</string>
    <string name="instracker_offer_title">Instracking</string>
    <string name="see_app">See app</string>
    <string name="instracker_offer_base">Post and Story insights, Ghost Followers and more</string>
    <string name="instracker_offer_subtitle">Get relevant information about your profile in one of the greatest social networks of the World!</string>
    <string name="like_amount_media_details">Likes</string>
    <string name="like_count_format" translatable="false">%1$d</string>
</resources>