<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/instracker_icon_offer"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="36dp"
            android:text="@string/instracker_offer_title"
            android:textFontWeight="600"
            android:textColor="?attr/colorOnBackground"
            android:textSize="22sp"
            android:textAlignment="gravity"
            android:gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="36dp"
            android:text="@string/instracker_offer_subtitle"
            android:textColor="?attr/colorOnBackground"
            android:textSize="16sp"
            android:textAlignment="gravity"
            android:gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="36dp"
            android:text="@string/instracker_offer_base"
            android:textColor="?attr/colorOnBackground"
            android:textSize="14sp"
            android:textAlignment="gravity"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="36dp"
            android:letterSpacing="0.01"
            android:textAllCaps="false"
            android:text="@string/see_app"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>