<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@drawable/instagram_background"
        android:padding="24dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="42sp"
                android:textColor="@android:color/white"
                app:fontFamily="@font/lobster_two" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/add_profile_desc"
                android:textSize="14sp"
                android:textColor="@android:color/white"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/instagram_username_label"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textFontWeight="500"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                style="@style/Widget.LikesView.TextInputLayout.Login">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@null"
                    android:textFontWeight="600"
                    android:textSize="14sp"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={actions.username}"
                    android:hint="@string/instagram_username_hint"
                    android:textColorHint="#B1FFFFFF"
                    android:enabled="@{!actions.loading}"
                    app:textInputError="@{actions.usernameError}"
                    tools:ignore="UnusedAttribute"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_add_profile"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_profile"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/do_login_action"
                android:enabled="@{!actions.loading}"
                android:onClick="@{() -> actions.onLogin(actions.username)}"
                app:goneIf="@{actions.loading}"
                style="@style/Widget.LikesView.MaterialButton.Login"/>
        </LinearLayout>
    </ScrollView>
</layout>