<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profile"
            type="dev.forcetower.likesview.core.model.database.InstagramProfile" />

        <variable
            name="actions"
            type="dev.forcetower.likesview.view.home.HomeActions" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@string/remove_profile"
            android:textAlignment="gravity"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@{@string/remove_profile_sub(profile.username)}"
            android:textAlignment="gravity"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/remove_profile_sub"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/explanation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@string/remove_profile_exp"
            android:textAlignment="gravity"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/remove_profile_cancel"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_yes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explanation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/remove_profile_continue"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:theme="@style/Widget.MaterialComponents.Button.TextButton"
            app:backgroundTint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_no"
            app:layout_constraintTop_toBottomOf="@+id/explanation" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>